Added .gitignore, Dockerfile, updated config

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# Auto detect text files and perform LF normalization
+# Auto detect text files and perform LF normali2.1.1-cuda12.1-cudnn8-runtimezation
 * text=auto
 
 # .ipynb ignore in statistics
